# learning_stuff

OS/: dlopen_.c  env.c
OS/cp/: cp.c
c/http_server/: CMakeLists.txt  Makefile  server.c  todo
c/http_server/includes/: debug.h  errno2http_response.h  http.h  http_server.h  socket_utilities.h  utilities.h
c/http_server/libs/: http.c  http_server.c  socket_utilities.c  utilities.c
c/http_server/src/: errno2http_response.c  http.c  http_server.c  socket_utilities.c  utilities.c
c/http_server/tests/: CMakeLists.txt  Makefile  run_tests.c
c/http_server/tests/includes/: generic_test_context.h  mocked_functions.h  test_source_http.h  test_source_socket_utilities.h  test_source_utilities.h
c/http_server/tests/src/: generic_test_context.c  mocked_functions.c  test_source_http.c  test_source_socket_utilities.c  test_source_utilities.c
c/linked_list/: linked_list.c  linked_list.h
ebpf/learning_ebpf_programming_the_linux_kernel_for_enhanced_observability/chapter3/e1/: detach_and_unload_main.sh  main.bpf.c  use_main.sh
ebpf/learning_ebpf_programming_the_linux_kernel_for_enhanced_observability/chapter3/e2/: main.py
ebpf/programs/drop_syn_acks_from_port/: drop_syn_acks_from_port.bpf.c
linux_kmods/LDD/myscull/: Makefile  load_me.sh  myscull.c  myscull.h
network/ratelimiting/: example.py  rate_limited_http_server.py
rust/: generic_max_function.rs
rust/leet_code/_1_two_sum/: Cargo.toml
rust/leet_code/_1_two_sum/src/: main.rs
rust/leet_code/_973_k_closest_point/: Cargo.toml
rust/leet_code/_973_k_closest_point/src/: l  main.rs
scapy/: icmp_answering_machine.py
scapy/icmp_echo_ans_machine/: to_fix.md
(+2 files in other folders)
